[package]
name = "at-comments"
version = "0.3.3"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
jetstream-oxide = "0.1.1"
atrium-api = "0.25.0"
log = "0.4.25"
serde = "1.0.217"
chrono = "0.4.39"
[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
